# aimoji

./: AGENTS.md  README.md  pyproject.toml
src/: download.py  preprocess.py  train.py
tests/: test_preprocess.py
